fix(ui): set "overflow: auto" so longer items get a scrollbar

--- a/ui/src/components/JsonApiViewer.sass
+++ b/ui/src/components/JsonApiViewer.sass
@@ -31,6 +31,7 @@
     &--value
       font-weight: 400
       color: #000
+      overflow: auto
 
     &--values
       font-weight: 400
